objects/enway__Mapping_Item__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>enway__Lead_Field_Api_Name__c</fullName>
        <label>Lead Field Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enway__SObject_Api_Name__c</fullName>
        <label>SObject Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enway__SObject_Field_Api_Name__c</fullName>
        <label>SObject Field Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mapping Item</label>
</CustomObject>